--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>About - Hugo Hero Theme</title>
+  <title>About - Miguel Outdoors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://migueloutdoors.github.io/favicon.png">
@@ -198,7 +198,7 @@
           <ul class="footer-menu">
             <li><a href="https://migueloutdoors.github.io/">Home</a></li>
             <li><a href="https://migueloutdoors.github.io/contact">Contact</a></li>
-            <li class="copyright">© 2023 Hugo Hero Theme</li>
+            <li class="copyright">© 2023 Miguel Outdoors</li>
           </ul>
         </div>
       </div>
