--- a/products-and-services/art-prints/index.html
+++ b/products-and-services/art-prints/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Hehe, Long Time No See - Miguel Outdoors</title>
+  <title>Art Prints - Miguel Outdoors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://migueloutdoors.github.io/favicon.png">
@@ -121,15 +121,13 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-9">
-      <h1>Hehe, Long Time No See</h1>
-      Monday, Jan 1, 0001
+      <h1>Art Prints</h1>
+      Thursday, Mar 16, 2023
       
       <div class="content">
-        <p>I was really excited that I could make this website. But as soon as it was up and it came time to write, a whole new challenge became apparent to me. I wouldn&rsquo;t say I&rsquo;m a writer, so actually making posts on this website presents a scary challenge 😖.</p>
-<p>Well I&rsquo;m back! I think I&rsquo;ve found a way to make writing a bit easier. As the tech entrepreneurs say, I&rsquo;ve &ldquo;updated my workflow&rdquo; to make it so that I can do the bulk of this writing on my phone! And the best part about writing on my phone is, I can use text to speech!</p>
-<p>Get ready for more posts, about more different and random topics. After all, this is my website and I can post whatever I want! 😈</p>
-<p>Anyways, here&rsquo;s a picture of me hiking McAfee Knob (again!). It was a great time and I just wanted to share.😃</p>
-<p><img src="../images/McAfee%20Hammock.jpg" alt=""></p>
+        <h1 id="art-prints">Art Prints</h1>
+<p>Maybe one day I&rsquo;ll start selling prints. The first print I make will be for the first painting I&rsquo;ve been proud of that was completely original plein aire. See below.</p>
+<p>More coming soon!</p>
 
       </div>
     </div>
