messing with favicon...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:title" content="Hugo Hero Theme" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://migueloutdoors.github.io" />
-<meta property="og:image" content="https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png" />
+<meta property="og:image" content="" />
 <meta property="og:description" content="This is the home for all that I do. I am a performer, and artist, and a drone service provider. Although not necesarrily in that order. I have a passion for the outdoors and my mission is to help heal others through more exposure to it. Theres something for everyone out there!" />
 <meta name="twitter:card" content="Movement, Art, $ Outdoor Adventure" />
 <meta name="twitter:site" content="@MiguelOutdoors" />
@@ -75,10 +75,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="https://migueloutdoors.github.io/"><img height=29px width=36px alt="Hugo Hero" src="/images/logo-no-background.svg" /></a>
+      <a href="https://migueloutdoors.github.io/"><img height=29px width=36px alt="Miguel Outdoors" src="/images/logo-no-background.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="https://migueloutdoors.github.io/"><img height=36px width=36px alt="Hugo Hero" src="/images/logo-mobile.svg" /></a>
+      <a href="https://migueloutdoors.github.io/"><img height=36px width=36px alt="Miguel Outdoors" src="/static/favicon.png" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -162,73 +162,11 @@
         <h2 class="text-primary text-capitalize">What is Miguel Outdoors?</h2>
         <p><p><strong>Table of Contents</strong></p>
 <ul>
-<li><a href="#what-is-miguel-outdoors">What is Miguel Outdoors?</a>
-<ul>
-<li><a href="#the-normal-travel-blog">The Normal Travel Blog</a></li>
-<li><a href="#artist-interviews">Artist Interviews</a></li>
-<li><a href="#travel-guidance">Travel Guidance</a></li>
 <li><a href="#closing">Closing</a></li>
 </ul>
-</li>
-<li><a href="#who-is-miguel">Who is Miguel?</a>
-<ul>
-<li><a href="#hobbies">Hobbies</a></li>
-<li><a href="#hiking-bucket-list">Hiking Bucket List</a></li>
-<li><a href="#kayaking-bucket-list">Kayaking Bucket List</a></li>
-<li><a href="#climbing-bucket-list">Climbing Bucket List</a></li>
-<li><a href="#reading-list">Reading List</a></li>
-</ul>
-</li>
-</ul>
-<h2 id="what-is-miguel-outdoors">What is Miguel Outdoors?</h2>
-<p>Miguel Outdoors is the primary home for documenting all that I love to do. I write about my passions, interesting places that I&rsquo;ve been, and I interview amazing people that I&rsquo;ve met throughout my life. The goal is to develop a long journal of music, art, movement, and a love for the outdoors that I can both remember for myself,  and share with others. I&rsquo;m inspired by people like: <a href="https://www.tiktok.com/@benkielesinski?lang=en">Ben Kielesinski</a>, <a href="https://www.youtube.com/c/ElinaOsborne">Elina Osborne</a> , and so many people in my local community.</p>
-<h3 id="the-normal-travel-blog">The Normal Travel Blog</h3>
-<p>Part of this site will be a normal travel blog. I&rsquo;ll go to places, share logistic tips, take fun pictures, and write about my experience.</p>
-<h3 id="artist-interviews">Artist Interviews</h3>
-<p>Another part will hopefully soon be a list of interviews on amazing people that I meet along the way. From aerial artists, to full time travelers, to local photographers and so on.</p>
-<h3 id="travel-guidance">Travel Guidance</h3>
-<p>This last part is still under development, if at any point I can provide a guide service, whether that be for surfing, kayaking, or certain trails in Virgina, my goal is to be able to physically take people out to enjoy the adventures I&rsquo;ve come to love. But there&rsquo;s a lot of certifications, safety, and other matter that I need to flesh out first.</p>
-<h3 id="closing">Closing</h3>
-<p>Welcome! Stay awhile if you like, subscribe for free and get notifications for when I post, and if you feel so inclined there&rsquo;s always the option to <a href="https://www.buymeacoffee.com/MiguelOutdoors">buy me a coffee</a>. ☕</p>
-<h2 id="who-is-miguel">Who is Miguel?</h2>
-<h3 id="hobbies">Hobbies</h3>
-<ul>
-<li>Rock Climbing</li>
-<li>Backpacking</li>
-<li>Kayaking</li>
-<li>Woodcrafting (new)</li>
-<li>Gardening</li>
-</ul>
-<p>Notice how writing is not on here? To be honest, despite having this website, I struggle with writing. So if you catch spelling mistakes or would like to comment on my writing please do 😄.</p>
-<h3 id="hiking-bucket-list">Hiking Bucket List</h3>
-<ul>
-<li><input disabled="" type="checkbox"> Dolly Sods West Virginia</li>
-<li><input disabled="" type="checkbox"> Natural Bridge</li>
-<li><input disabled="" type="checkbox"> Big Devils Stairs Trail</li>
-<li><input checked="" disabled="" type="checkbox"> Hike the Virginia Triple Crown</li>
-</ul>
-<p>Eventually I&rsquo;d like to try a long thru hike. But, as I&rsquo;ve come to find out recently, I might not have healthy enough knees to support it anymore. Might write more on this struggle later.</p>
-<h3 id="kayaking-bucket-list">Kayaking Bucket List</h3>
-<ul>
-<li><input disabled="" type="checkbox"> Overnight camp at an island.</li>
-<li><input disabled="" type="checkbox"> 3 day Kayak trip.</li>
-<li><input disabled="" type="checkbox"> Climb a big buoy and do a backflip off of it.</li>
-<li><input disabled="" type="checkbox"> Safely roll a kayak</li>
-<li><input disabled="" type="checkbox"> Lake Moomaw</li>
-<li><input disabled="" type="checkbox"> Lake Drummond</li>
-</ul>
-<h3 id="climbing-bucket-list">Climbing Bucket List</h3>
-<ul>
-<li><input checked="" disabled="" type="checkbox"> Pass a Lead Climbing Test</li>
-<li><input checked="" disabled="" type="checkbox"> Climb outside next year (2022)</li>
-<li><input checked="" disabled="" type="checkbox"> Climb a 5.9 Lead Route</li>
-<li><input disabled="" type="checkbox"> Visit Red River Gorge West Virginia</li>
-<li><input checked="" disabled="" type="checkbox"> Visit New River Gorge West Virginia</li>
-</ul>
-<h3 id="reading-list">Reading List</h3>
-<p>Here&rsquo;s my current <a href="https://www.goodreads.com/review/list/66568677-miguel-lopez-rivera?ref=nav_mybooks&amp;shelf=currently-reading">reading list</a> as well as a list of books I might <a href="https://www.goodreads.com/review/list/66568677-miguel-lopez-rivera?ref=nav_mybooks&amp;shelf=to-read">want to read</a> someday. Please send me book recommendations 🤓.</p>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
+<hr>
+<p>Miguel Outdoors is the primary home for documenting all that I love to do. I write about my passions, interesting places that I&rsquo;ve been, and I interview amazing people that I&rsquo;ve met throughout my life. The goal is to develop a long journal of music, art, movement, and a love for the outdoors that I can both remember for myself, and share with others. I&rsquo;m inspired by people like: <a href="https://www.tiktok.com/@benkielesinski?lang=en">Ben Kielesinski</a>, <a href="https://www.youtube.com/c/ElinaOsborne">Elina Osborne</a> , and so many people in my local community.</p>
+<p>Welcome! Stay awhile if you like, subscribe for free and get notifications for when I post, and if you feel so inclined there&rsquo;s always the option to <a href="https://www.buymeacoffee.com/MiguelOutdoors">buy me a coffee</a>. ☕ Thank you very much for stopping by!</p>
 </p>
         <a class="button" href="/"></a>
       </div>
