cleaned up public and rebuilt

--- a/index.html
+++ b/index.html
@@ -155,18 +155,14 @@
 
 
 
-<div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/images/kevin-bhagat-461952-unsplash.jpg');">
+<div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/');">
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
         <h2 class="text-primary text-capitalize">What is Miguel Outdoors?</h2>
-        <p><p><strong>Table of Contents</strong></p>
-<ul>
-<li><a href="#closing">Closing</a></li>
-</ul>
-<hr>
-<p>Miguel Outdoors is the primary home for documenting all that I love to do. I write about my passions, interesting places that I&rsquo;ve been, and I interview amazing people that I&rsquo;ve met throughout my life. The goal is to develop a long journal of music, art, movement, and a love for the outdoors that I can both remember for myself, and share with others. I&rsquo;m inspired by people like: <a href="https://www.tiktok.com/@benkielesinski?lang=en">Ben Kielesinski</a>, <a href="https://www.youtube.com/c/ElinaOsborne">Elina Osborne</a> , and so many people in my local community.</p>
-<p>Welcome! Stay awhile if you like, subscribe for free and get notifications for when I post, and if you feel so inclined there&rsquo;s always the option to <a href="https://www.buymeacoffee.com/MiguelOutdoors">buy me a coffee</a>. ☕ Thank you very much for stopping by!</p>
+        <p><p>Miguel Outdoors is the primary home for documenting all that I love to do. I write about my passions, interesting places that I&rsquo;ve been, and I interview amazing people that I&rsquo;ve met throughout my life. The goal is to develop a long journal of music, art, movement, and a love for the outdoors that I can both remember for myself, and share with others. I&rsquo;m inspired by people like: <a href="https://www.tiktok.com/@benkielesinski?lang=en">Ben Kielesinski</a>, <a href="https://www.youtube.com/c/ElinaOsborne">Elina Osborne</a> , and so many people in my local community.</p>
+<p>Welcome! Stay awhile if you like. if you feel so inclined there&rsquo;s always the option to <a href="https://www.buymeacoffee.com/MiguelOutdoors">buy me a coffee</a>. ☕ Thank you very much for stopping by!</p>
+<!-- raw HTML omitted -->
 </p>
         <a class="button" href="/"></a>
       </div>
