broke and then fixed logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://migueloutdoors.github.io" />
 <meta property="og:image" content="" />
 <meta property="og:description" content="This is the home for all that I do. I am a performer, and artist, and a drone service provider. Although not necesarrily in that order. I have a passion for the outdoors and my mission is to help heal others through more exposure to it. Theres something for everyone out there!" />
-<meta name="twitter:card" content="Movement, Art, $ Outdoor Adventure" />
+<meta name="twitter:card" content="Movement, Art, &amp; Outdoor Adventure" />
 <meta name="twitter:site" content="@MiguelOutdoors" />
 <meta name="twitter:creator" content="@MiguelOutdoors" />
 
@@ -75,7 +75,7 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="https://migueloutdoors.github.io/"><img height=29px width=36px alt="Miguel Outdoors" src="/images/logo-no-background.svg" /></a>
+      <a href="https://migueloutdoors.github.io/"><img height=29px width=36px alt="Miguel Outdoors" src="/logos/svg/logo-no-background.svg" /></a>
     </div>
     <div class="logo-mobile">
       <a href="https://migueloutdoors.github.io/"><img height=36px width=36px alt="Miguel Outdoors" src="/static/favicon.png" /></a>
