--- a/products-and-services/fenix-aerial/index.html
+++ b/products-and-services/fenix-aerial/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Grip-it Rope Comp 2022 - Miguel Outdoors</title>
+  <title>Fenix Aerial - Miguel Outdoors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://migueloutdoors.github.io/favicon.png">
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class='page page-work-single'>
+<body class='page page-services-single'>
   <div id="main-menu-mobile" class="main-menu-mobile">
   <ul>
     
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">blog</span>
+      <span class="hero-section">products-and-services</span>
       <h1></h1>
       <p></p>
     </div>
@@ -117,23 +117,12 @@
 <div class="container pt-4 pt-md-10 pb-4 pb-md-10">
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
-      <div class="work work-single">
-        <div class="content"><h2 id="post-comp">Post Comp</h2>
-<p>I don&rsquo;t know what day it is, but it&rsquo;s the day after the comp. I really liked it. It felt really good to be an athlete, to feel like an athlete. I had a lot of performance, anxiety and fear when I first showed up. All the problems seemed surprisingly, not too crazy, but I kind of knew that they were sneakily hard. When we got to the first problem, I said, I had also told myself to treat it like a fun exhibition of my skills, the body, hanging out with all my friends.</p>
-<p>The first problem was an obvious crack. I was the last one to go out of a group of three friends, both other climbers flashed it their first attempt. I felt the pressure to flash, and the crack definitely intimidated me. So when I went up there, everything was going good until I got to the crack and I started panicking. I thought that I wasn&rsquo;t going to be able to get past it. I couldn&rsquo;t do what they did. They skipped the crack basically by just using their strength. And I quickly found out couldn&rsquo;t physically do that. I made the realization that I had to use technique and I went ahead to try for the crack move. It was <em>intense</em>. I cut my feet and I almost fell! But I wanted to flash it just like everybody else. And so even though I cut my feet, I had both of my fists in the crack, and I made it!!!</p>
-<p>It felt… awesome. That set the tone for the rest of the competition. I didn&rsquo;t care about the performance. I just was happy that I gave my best effort and made it! It definitely broke the ice for the rest of the comp.</p>
-<p>If felt even cooler because at the time,I was currently nursing an injury. Not a serious one, but my fingertips we’re kind of sore from trying full crimps too much. And so I was nervous for the next routes.</p>
-<p>The green was pretty crimpy and pretty hard. I think I did my best and I was happy with my performance, but I did not try that one multiple times for safety. In fact, I didn&rsquo;t try any more than once. I think I had trained too much the week before. But I was okay with the results. You never want to be out of practice. You want to warm up properly, but you don&rsquo;t want to over exert yourself. And I think I over exert myself a little bit and I ate, I didn&rsquo;t eat enough prior.</p>
-<p>So I think next time I&rsquo;ll bring a protein bar. I&rsquo;ll eat a little bit more prior, but I still don&rsquo;t want to eat too much to where I&rsquo;m heavy. But yeah, it was a great, had so much fun. The two lead problems were tons of fun.</p>
-<p>So yeah, it went really well. It took lots of fun pictures. I can&rsquo;t wait to post on Instagram about it and I&rsquo;m super excited to come back to more, more comps.</p>
-<p>This is like the beginning. This is the end of the first chapter for me of climbing or maybe the second chapter. It&rsquo;s a great transition. I can compete on an intermediate level, which feels awesome. It was, it was just a really fun, great experience. Can&rsquo;t wait for more.</p>
-<p>As this spring rolls in, other sports come and take my attention. And that’s totally fine. I love it. I can&rsquo;t wait to backpack, camp and kayak. And eventually once the summer comes around surf.</p>
-<p><img src="https://migueloutdoors.ghost.io/content/images/2022/04/IMG_0659.jpg" alt="IMG_0659"></p>
-<p>This was me the nest morning, I walked home from a friends house with a Gri Gri in my left pocket and a tacobell taco in my right. I put it on my windowsill and had it for breakfast the next day! 😅</p>
+      <div class="service service-single">
+        <div class="content"><h1 id="drone-services">Drone Services</h1>
+<p>I&rsquo;ve been working on this in the background. I think we&rsquo;re almost ready to launch!</p>
 </div>
       </div>
     </div>
-    
   </div>
 </div>
 
