cleaned up content

--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
         <h2 class="text-primary text-capitalize">What is Miguel Outdoors?</h2>
-        <p><p>Miguel Outdoors is the primary home for documenting all that I love to do. I write about my passions, interesting places that I&rsquo;ve been, and I interview amazing people that I&rsquo;ve met throughout my life. The goal is to develop a long journal of music, art, movement, and a love for the outdoors that I can both remember for myself, and share with others. I&rsquo;m inspired by people like: <a href="https://www.tiktok.com/@benkielesinski?lang=en">Ben Kielesinski</a>, <a href="https://www.youtube.com/c/ElinaOsborne">Elina Osborne</a> , and so many people in my local community.</p>
-<p>Welcome! Stay awhile if you like. if you feel so inclined there&rsquo;s always the option to <a href="https://www.buymeacoffee.com/MiguelOutdoors">buy me a coffee</a>. ☕ Thank you very much for stopping by!</p>
+        <p><p>Miguel Outdoors is the primary home for documenting all that I love to do. I write about my passions, interesting places that I&rsquo;ve been, and I interview amazing people that I&rsquo;ve met throughout my life. The goal is to develop a long journal of music, art, movement, and a love for the outdoors that I can both remember for myself, and share with others. I&rsquo;m inspired by people like: <a href="https://www.tiktok.com/@benkielesinski?lang=en">Ben Kielesinski</a>, <a href="https://www.youtube.com/c/ElinaOsborne">Elina Osborne</a>, as well as all the amazing people I&rsquo;ve met here in Hampton Roads, Virginia.</p>
+<p>Welcome! Stay awhile if you like. And, if you feel so inclined there&rsquo;s always the option to <a href="https://www.buymeacoffee.com/MiguelOutdoors">buy me a coffee</a>. ☕ Thank you very much for stopping by!</p>
+<hr>
+<p><a href="">Home</a>&mdash;<a href="https://migueloutdoors.github.io/blog/">Blog</a>&mdash;<a href="https://migueloutdoors.github.io/gallery/">Gallery</a>&mdash;<a href="https://migueloutdoors.github.io/contact/">Contact</a>&mdash;</p>
 <!-- raw HTML omitted -->
 </p>
         <a class="button" href="/"></a>
