--- a/products-and-services/art-prints/index.html
+++ b/products-and-services/art-prints/index.html
@@ -118,8 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><h1 id="art-prints">Art Prints</h1>
-<p>Maybe one day I&rsquo;ll start selling prints. The first print I make will be for the first painting I&rsquo;ve been proud of that was completely original plein aire. See below.</p>
+        <div class="content"><p>Maybe one day I&rsquo;ll start selling prints. The first print I make will be for the first painting I&rsquo;ve been proud of that was completely original plein aire. See below.</p>
 <p>More coming soon!</p>
 </div>
       </div>
