--- a/products-and-services/index.html
+++ b/products-and-services/index.html
@@ -123,16 +123,11 @@
     
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
-  <div class="service-image">
-    <img height="80" width="80" src="/services/service-icon-1.png" alt="Art Prints" />
-  </div>
-  
   <div class="service-content">
     <h2 class="service-title">
       <a href="https://migueloutdoors.github.io/products-and-services/art-prints/">Art Prints</a>
     </h2>
-    <h1 id="art-prints">Art Prints</h1>
-<p>Maybe one day I&rsquo;ll start selling prints. The first print I make will be for the first painting...</p>
+    <p>Maybe one day I&rsquo;ll start selling prints. The first print I make will be for the first painting I&rsquo;ve been...</p>
   </div>
 </div></div>
     
