--- a/products-and-services/art-prints/index.html
+++ b/products-and-services/art-prints/index.html
@@ -104,12 +104,12 @@
   </div>
 </div>
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/service1.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">products-and-services</span>
-      <h1>Services</h1>
-      <p>Services that grow with your business</p>
+      <h1>Art Prints</h1>
+      <p>Don&#39;t buy my art. It will go straight to my head 😅</p>
     </div>
   </div>
 </div>
@@ -118,7 +118,8 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Maybe one day I&rsquo;ll start selling prints. The first print I make will be for the first painting I&rsquo;ve been proud of that was completely original plein aire. See below.</p>
+        <div class="content"><p>I do not intent to make this a priority. In fact, as much as possible I&rsquo;d prefer to NOT commodify my art. However, we live in the real world and if passive income can be made that can help fund other decommodified art, then maybe this is okay. If you like my art and would like a print, I made them available for you. However, I&rsquo;d encourage you to check out this <a href="https://en.wikipedia.org/wiki/Decommodification">Wikipedia article</a> that talks about decommodification in more detail.</p>
+<p>The first print I make will be for the first painting I&rsquo;ve been proud of that was completely original plein aire. See below.</p>
 <p>More coming soon!</p>
 </div>
       </div>
