--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
     
 
-<div class="hero-image hero-image-fullscreen" style="background-image: url('/images/Cypress-Background.jpg');">
+<div class="hero-image hero-image-fullscreen" style="background-image: url('/Cypress%20Background.jpg');">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
