privacy policy undrafted derp

--- a/products-and-services/index.html
+++ b/products-and-services/index.html
@@ -159,6 +159,17 @@
   
   <div class="service-content">
     <h2 class="service-title">
+      <a href="https://migueloutdoors.github.io/products-and-services/privacy-policy/">Privacy Policy</a>
+    </h2>
+    <p><strong>Privacy Policy</strong></p>
+<p>Miguel Outdoors built the Miguel Outdoors app as a Commercial app. This SERVICE is provided by Miguel...</p>
+  </div>
+</div></div>
+    
+    <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
+  
+  <div class="service-content">
+    <h2 class="service-title">
       <a href="https://migueloutdoors.github.io/products-and-services/fenix-aerial-llc/">Drone Services</a>
     </h2>
     <p>I am a FAA Part 107 Commercial Drone Pilot. Let me fly for you! Services include: photography, cinematography, home...</p>
