Updated prints page

--- a/products-and-services/art-prints/index.html
+++ b/products-and-services/art-prints/index.html
@@ -133,8 +133,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <div class="content"><p><a href="https://MiguelOutdoors.Gumroad.com">Online Print Store</a></p>
-<p>I do not intent to make this a priority. In fact, as much as possible I&rsquo;d prefer to NOT commodify my art. However, we live in the real world and if a passive income can be made that can help fund other decommodified art, then maybe this is okay. If you like my art and would like a print, whether it&rsquo;s currently on the store or not, I can make them them available for you. Feel free to <a href="https://migueloutdoors.github.io/contact/">contact me</a> for more information.</p>
-<p>Lastly, I&rsquo;d encourage you to check out this <a href="https://en.wikipedia.org/wiki/Decommodification">Wikipedia article</a> it talks about decommodification in more detail and is generally a great read.</p>
+<p>If you like my art and would like a print, whether it&rsquo;s currently on the store or not, I can make them available for you. Feel free to <a href="https://migueloutdoors.github.io/contact/">contact me</a> for more information.</p>
 <p>More coming soon!</p>
 </div>
       </div>
