--- a/products-and-services/fenix-aerial-llc/index.html
+++ b/products-and-services/fenix-aerial-llc/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Drone Services - Miguel Outdoors</title>
+  <title>Fenix Aerial LLC - Miguel Outdoors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="https://migueloutdoors.github.io/favicon.png">
@@ -134,7 +134,7 @@
       <div class="service service-single">
         <div class="content"><p>I am a FAA Part 107 Commercial Drone Pilot. Let me fly for you! Services include: photography, cinematography, home inspections, and more is on the way.</p>
 <h2 id="my-experience">My Experience</h2>
-<p>I&rsquo;ve flown for about two years with my current job but do not have a portfolio since it&rsquo;s their intelectual property.</p>
+<p>I&rsquo;ve flown for about two years with my current job but do not have a portfolio since it&rsquo;s their intellectual property.</p>
 </div>
       </div>
     </div>
