--- a/products-and-services/index.html
+++ b/products-and-services/index.html
@@ -139,6 +139,17 @@
   
   <div class="service-content">
     <h2 class="service-title">
+      <a href="https://migueloutdoors.github.io/products-and-services/art-prints/">Art Prints</a>
+    </h2>
+    <p><a href="https://MiguelOutdoors.Gumroad.com">Online Print Store</a></p>
+<p>If you like my art and would like a print, whether it&rsquo;s currently on the store or not, I can...</p>
+  </div>
+</div></div>
+    
+    <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
+  
+  <div class="service-content">
+    <h2 class="service-title">
       <a href="https://migueloutdoors.github.io/products-and-services/web-development/">Web Development</a>
     </h2>
     <p>Do you like this website? Thanks so much, I built it myself you know. At this time I only know how to do create static...</p>
@@ -149,18 +160,7 @@
   
   <div class="service-content">
     <h2 class="service-title">
-      <a href="https://migueloutdoors.github.io/products-and-services/art-prints/">Art Prints</a>
-    </h2>
-    <p><a href="https://MiguelOutdoors.Gumroad.com">Online Print Store</a></p>
-<p>I do not intent to make this a priority. In fact, as much as possible I&rsquo;d prefer to NOT...</p>
-  </div>
-</div></div>
-    
-    <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
-  
-  <div class="service-content">
-    <h2 class="service-title">
-      <a href="https://migueloutdoors.github.io/products-and-services/fenix-aerial-llc/">Drone Services</a>
+      <a href="https://migueloutdoors.github.io/products-and-services/fenix-aerial-llc/">Fenix Aerial LLC</a>
     </h2>
     <p>I am a FAA Part 107 Commercial Drone Pilot. Let me fly for you! Services include: photography, cinematography, home...</p>
   </div>
