--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <a href="https://migueloutdoors.github.io/products-and-services/art-prints/">Art Prints</a>
     </h2>
     <p><a href="https://MiguelOutdoors.Gumroad.com">Online Print Store</a></p>
-<p>If you like my art and would like a print, whether it&rsquo;s currently on the store or not, I can...</p>
+<p>If you like my art and would like a print, I can make them available for you, whether it&rsquo;s...</p>
   </div>
 </div>
     </div>
