--- a/products-and-services/art-prints/index.html
+++ b/products-and-services/art-prints/index.html
@@ -133,7 +133,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <div class="content"><p><a href="https://MiguelOutdoors.Gumroad.com">Online Print Store</a></p>
-<p>If you like my art and would like a print, whether it&rsquo;s currently on the store or not, I can make them available for you. Feel free to <a href="https://migueloutdoors.github.io/contact/">contact me</a> for more information.</p>
+<p>If you like my art and would like a print, I can make them available for you, whether it&rsquo;s currently on the store or not. Feel free to <a href="https://migueloutdoors.github.io/contact/">contact me</a> for more information.</p>
 <p>More coming soon!</p>
 </div>
       </div>
