--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </li>
         
         <li class="social-icon">
-            <a href="#ZgotmplZ"  aria-label="Learn more on instagram">
+            <a href="https://www.instagram.com/migueloutdoors_/"  aria-label="Learn more on instagram">
                 <img class="svg-inject" src="/svg/icons/instagram.svg" />
             </a>
         </li>
