--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </li>
         
         <li class="social-icon">
-            <a href="https://www.twitch.tv/miggy_l0"  aria-label="Learn more on twitch">
+            <a href="https://www.twitch.tv/roadrunner_art"  aria-label="Learn more on twitch">
                 <img class="svg-inject" src="/svg/icons/twitch.svg" />
             </a>
         </li>
